[package]
name = "war_of_ants"
version = "0.1.0"
authors = ["DoubleTroublePy <doubletroublepy@gmail.com>"]
edition = "2021"

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[env]
WGPU_POWER_PREF = "high"

[dependencies]
env_logger = "0.9"
log = "0.4"
pixels = "0.9.0"
winit = "0.26"
winit_input_helper = "0.12"
rand = "0.8.5"

